--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
   <body>
 	<div class="social_buttons">
-		<iframe src="http://ghbtns.com/github-btn.html?user=vedmack&repo=yadcf&type=watch&count=true"
+		<iframe src="http://ghbtns.com/github-btn.html?user=vedmack&repo=angular-colorpicker&type=watch&count=true"
 			allowtransparency="true" frameborder="0" scrolling="0" width="150" height="30" style="vertical-align: middle"></iframe>
 			
 				
@@ -105,7 +105,7 @@
 			<h3>The color picker for AngularJS - Native / Simple / Cool</h3>
 			<h3>version 0.1.0<h3>
 			<div id="download_btn_wrapper">
-				<a href="https://github.com/vedmack/yadcf/releases" class="some_btn download_btn">
+				<a href="https://github.com/vedmack/angular-colorpicker/releases" class="some_btn download_btn">
 					Download
 				</a>
 			</div>
